--- a/src/app/extraspages/coming-soon/coming-soon.component.html
+++ b/src/app/extraspages/coming-soon/coming-soon.component.html
@@ -20,26 +20,26 @@
                           <img src="assets/images/comingsoon.png" alt="" height="120" class="move-animation">
                       </div>
                       <div class="mb-5">
-                          <h1 class="display-2 coming-soon-text">Coming Soon</h1>
+                          <h1 class="display-2 coming-soon-text">Proximamente</h1>
                       </div>
                       <div>
                           <div class="row justify-content-center mt-5">
                               <div class="col-lg-8">
                                   <div id="countdown" class="countdownlist">
                                     <div class="countdownlist-item">
-                                        <div class="count-title">Days</div>
+                                        <div class="count-title">Dias</div>
                                         <div class="count-num">{{_days}}</div>
                                     </div>
                                     <div class="countdownlist-item">
-                                        <div class="count-title">Hours</div>
+                                        <div class="count-title">Horas</div>
                                         <div class="count-num">{{_hours}}</div>
                                     </div>
                                     <div class="countdownlist-item">
-                                        <div class="count-title">Minutes</div>
+                                        <div class="count-title">Minutos</div>
                                         <div class="count-num">{{_minutes}}</div>
                                     </div>
                                     <div class="countdownlist-item">
-                                        <div class="count-title">Seconds</div>
+                                        <div class="count-title">Segundos</div>
                                         <div class="count-num">{{_seconds}}</div>
                                     </div>
                                 </div>
@@ -47,13 +47,13 @@
                           </div>
 
                           <div class="mt-5">
-                              <h4>Get notified when we launch</h4>
-                              <p class="text-muted">Don't worry we will not spam you 😊</p>
+                              <h4>Le notificaremos cuando este lista</h4>
+                              <p class="text-muted">No se preocupe no enviaremos correos spam 😊</p>
                           </div>
 
                           <div class="input-group countdown-input-group mx-auto my-4">
-                              <input type="email" class="form-control border-light shadow" placeholder="Enter your email address" aria-label="search result" aria-describedby="button-email">
-                              <button class="btn btn-success" type="button" id="button-email">Send<i class="ri-send-plane-2-fill align-bottom ms-2"></i></button>
+                              <input type="email" class="form-control border-light shadow" placeholder="Ingresa tu dirección de correo" aria-label="search result" aria-describedby="button-email">
+                              <button class="btn btn-success" type="button" id="button-email">Enviar<i class="ri-send-plane-2-fill align-bottom ms-2"></i></button>
                           </div>
                       </div>
                   </div>
@@ -72,7 +72,7 @@
           <div class="row">
               <div class="col-lg-12">
                   <div class="text-center">
-                      <p class="mb-0 text-muted">&copy; {{year}} Velzon. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+                      <p class="mb-0 text-muted">&copy; {{year}} Conect-IA. Design & Develop by Tresidea spa</p>
                   </div>
               </div>
           </div>
