--- a/src/app/pages/projects/create/compliance/task/task.component.html
+++ b/src/app/pages/projects/create/compliance/task/task.component.html
@@ -217,12 +217,12 @@
                                     <td>
                                         <div class="d-flex gap-2">
                                             <div class="hstack gap-3 fs-15">
-                                                <a href="javascript:void(0);" class="link-primary"
+                                                <!--<a href="javascript:void(0);" class="link-primary"
                                                 title="Ver" 
-                                                data-bs-toggle="modal" data-bs-target="#showModal"><i class="ri-eye-line"></i></a>
+                                                data-bs-toggle="modal" data-bs-target="#showModal"><i class="ri-eye-line"></i></a>-->
 
                                                 <a href="javascript:void(0);" class="link-primary"
-                                                title="Editar" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Task/{{cuerpo_id}}/Assess/{{data.id}}/"><i class="ri-pencil-fill"></i></a>
+                                                title="Dar Cumplimiento" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Task/{{cuerpo_id}}/Assess/{{data.id}}/"><i class="ri-shield-user-fill"></i></a>
                                                 
                                                 <a href="javascript:void(0);" class="link-danger" 
                                                 title="Eliminar"
