--- a/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
+++ b/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
@@ -29,14 +29,14 @@
                 
                 <div class="col-xxl-3 col-lg-3">
                     <p><b>ARTICULO:</b></p>
-                    <p><b>{{detail.total_articulos > 0 ? detail.total_articulos : 0}} {{detail.total_articulos == 1 ? 'Articulo aplicable' : 'Articulos aplicables'}}</b></p>
+                    <p><b>{{total_articulos}} {{total_articulos == 1 ? 'Articulo aplicable' : 'Articulos aplicables'}}</b></p>
                 </div>
 
                 <div class="col-xxl-3 col-lg-3">
                     <p><b>AVANCE:</b></p>
                     
                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                        <div class="progress-bar" role="progressbar" [style]="avance > 0 ? 'width:'+avance+'%;':'width: 1%;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{avance}}%</div>
                     </div>
                 </div>
 
@@ -87,19 +87,19 @@
                         <p><b>Articulos:</b></p>
                     </div>
                     <div class="col-xxl-3 col-lg-3">
-                        <p><b>0 No Cumple</b></p>
+                        <p><b>{{nocumple}} No Cumple</b></p>
                         <div class="progress progress-sm">
                             <div class="progress-bar bg-danger" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="col-xxl-3 col-lg-3">
-                        <p><b>0 Cumple</b></p>
+                        <p><b>{{cumple}} Cumple</b></p>
                         <div class="progress progress-sm">
                             <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="col-xxl-3 col-lg-3">
-                        <p><b>0 Cumple Parcial</b></p>
+                        <p><b>{{parcial}} Cumple Parcial</b></p>
                         
                         <div class="progress progress-sm">
                             <div class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -238,7 +238,7 @@
                                     </div>
                                 </td>-->
                                 <td class="status"><span
-                                            class="badge badge-soft-{{data.conectado ? 'success' : 'danger'}} text-uppercase">{{data.conectado ? 'Evaluado' : 'Sin evaluar'}}</span>
+                                            class="badge badge-soft-{{data.evaluations.estado && data.evaluations.estado == 'CUMPLE' ? 'success' : (data.evaluations.estado && data.evaluations.estado == 'CUMPLE PARCIALMENTE' ? 'warning' : 'danger')}} text-uppercase">{{data.evaluations.estado ? (data.evaluations.estado == 'CUMPLE' ? 'Cumple' : (data.evaluations.estado == 'CUMPLE PARCIALMENTE' ? 'Cumple Parcialmente' : 'No Cumple')) : 'Sin evaluar'}}</span>
                                 </td>
                                 <td>
                                     
@@ -252,7 +252,7 @@
                                             </div>
                                             <div class="edit" *ngIf="!validateRol(3)">
                                                 <button class="btn btn-sm btn-primary edit-item-btn" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Task/{{data.id}}"
-                                                    >Revisar</button>
+                                                    ><!--Revisar--><i class="ri-eye-line"></i></button>
                                             </div>
                                             <!--<a href="javascript:void(0);" class="link-primary" 
                                             title="Editar"
