--- a/src/app/pages/plans-work/create/task/task.component.html
+++ b/src/app/pages/plans-work/create/task/task.component.html
@@ -137,7 +137,7 @@
                                 Mostrando
                                 {{service.startIndex}} de
                                 {{service.endIndex}} de {{service.totalRecords}}
-                                entradas
+                                registros
                             </div>
                         </div>
                         <div class="col col-sm-6">
@@ -242,7 +242,7 @@
                                 Mostrando
                                 {{service.startIndex}} de
                                 {{service.endIndex}} de {{service.totalRecords}}
-                                entradas
+                                registros
                             </div>
                         </div>
                         <!-- Pagination -->
