--- a/src/app/pages/projects/create/type/body-legal/body-legal.component.html
+++ b/src/app/pages/projects/create/type/body-legal/body-legal.component.html
@@ -127,7 +127,7 @@
                                 Mostrando
                                 {{service.startIndex}} de
                                 {{service.endIndex}} de {{service.totalRecords}}
-                                entradas
+                                registros
                             </div>
                         </div>
                         <!-- Pagination -->
