--- a/src/app/pages/projects/project-anality/project-anality.component.html
+++ b/src/app/pages/projects/project-anality/project-anality.component.html
@@ -80,12 +80,11 @@
 </div>-->
 
 <ng-template #TabContent>
-    <div class="row">
+    <!--<div class="row">
         <div class="col-xl-12">
             <div class="card">        
             <div class="row margin-card">
             <div class="col-lg-3">
-            <!-- Buttons Group -->
             <div class="btn-group" role="group" aria-label="Filters1">
                 <button type="button" class="btn btn-primary">Distrito</button>
                 <button type="button" class="btn btn-primary">Área</button>
@@ -120,7 +119,7 @@
             
             </div>
         </div>
-    </div>
+    </div>-->
     
     <div class="row">
         <div class="col-xl-12">
