--- a/src/app/pages/plans-work/plans-work-anality/plans-work-anality.component.html
+++ b/src/app/pages/plans-work/plans-work-anality/plans-work-anality.component.html
@@ -122,16 +122,15 @@
                     <div class="row justify-content-md-between align-items-md-center">
                         <div class="col col-sm-6">
                             <div class="dataTables_info mb-2" id="tickets-table_info" role="status" aria-live="polite">
-                                Mostrando
-                                {{service.startIndex}} de
-                                {{service.endIndex}} de {{service.totalRecords}}
-                                entradas
+                                Mostrando página 1 de
+                                {{pageTotal((TaskDatas ? TaskDatas.length : 0))}} de {{TaskDatas ? TaskDatas.length : 0}}
+                                registros
                             </div>
                         </div>
                         <!-- Pagination -->
                         <div class="col col-sm-6">
                             <div class="text-sm-right float-sm-end listjs-pagination">
-                                <ngb-pagination [collectionSize]="(total | async)!" [(page)]="service.page"
+                                <ngb-pagination [collectionSize]="TaskDatas ? TaskDatas.length : 0" [(page)]="service.page"
                                     [pageSize]="service.pageSize">
                                 </ngb-pagination>
                             </div>
