--- a/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
+++ b/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
@@ -269,16 +269,16 @@
                 <div class="row justify-content-md-between align-items-md-center">
                     <div class="col col-sm-6">
                         <div class="dataTables_info mb-2" id="tickets-table_info" role="status" aria-live="polite">
-                            Mostrando
-                            {{service.startIndex}} de
-                            {{service.endIndex}} de {{service.totalRecords}}
-                            entradas
+                            Mostrando página
+                            1 de
+                            {{pageTotal((articulosDatas ? articulosDatas.length : 0))}} de {{articulosDatas ? articulosDatas.length : 0}}
+                            registros
                         </div>
                     </div>
                     <!-- Pagination -->
                     <div class="col col-sm-6">
                         <div class="text-sm-right float-sm-end listjs-pagination">
-                            <ngb-pagination [collectionSize]="(total | async)!" [(page)]="service.page"
+                            <ngb-pagination [collectionSize]="articulosDatas ?articulosDatas.length : 0" [(page)]="service.page"
                                 [pageSize]="service.pageSize">
                             </ngb-pagination>
                         </div>
