correcciones empresaId y tasks

--- a/src/app/pages/plans-work/create/create.component.html
+++ b/src/app/pages/plans-work/create/create.component.html
@@ -24,8 +24,10 @@
                         placeholder="Escribe nombre del Plan de Trabajo" formControlName="nombre">
                         
                     <label class="form-label" style="margin-top: 20px !important;" for="project-title-input">Descripción del Plan de trabajo</label>
-                    <input type="text" class="form-control" id="project-title-input"
-                        placeholder="Escribe descripción del Plan de trabajo" formControlName="descripcion">
+                    <!--<input type="text" class="form-control" id="project-title-input"
+                        placeholder="Escribe descripción del Plan de trabajo" formControlName="descripcion">-->
+                        <textarea rows="3" class="form-control" id="project-title-input"
+                        placeholder="Escribe descripción del Plan de trabajo" formControlName="descripcion"></textarea>
                     </form>
                 </div>
             </div>
