--- a/src/app/pages/projects/create/type/type.component.html
+++ b/src/app/pages/projects/create/type/type.component.html
@@ -1,6 +1,6 @@
 <!-- Start Breadcrumbs -->
-<app-breadcrumbs title="Paso 4: Conecta la normativa a tus procesos" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
-<!-- End Breadcrumbs -->
+<!--<app-breadcrumbs title="Paso 4: Conecta la normativa a tus procesos" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+--><!-- End Breadcrumbs -->
 <div class="card">
 <div class="card-body">
 <h5>Selecciona la forma de vinculación</h5>
