--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -25,7 +25,7 @@
               <i class="ri-search-line search-icon"></i>
           </div>
 
-		<div class="w-md">
+		<!--<div class="w-md">
           <select class="form-control" data-choices data-choices-search-false>
             <option value="All">Todos</option>
             <option value="Today">Hoy</option>
@@ -35,7 +35,7 @@
             <option value="This Month">Este Mes</option>
             <option value="Last Year">Ultimo Año</option>
           </select>
-		</div>
+		</div>-->
       </div>
   </div>
 </div>
