--- a/src/app/pages/plans-work/list/list.component.html
+++ b/src/app/pages/plans-work/list/list.component.html
@@ -24,8 +24,7 @@
               <input type="text" class="form-control" placeholder="Buscar..." [(ngModel)]="term"><!--"service.searchTerm"-->
               <i class="ri-search-line search-icon"></i>
           </div>
-
-		<div class="w-md">
+		<!--<div class="w-md">
           <select class="form-control" data-choices data-choices-search-false>
             <option value="All">Todos</option>
             <option value="Today">Hoy</option>
@@ -35,7 +34,7 @@
             <option value="This Month">Este Mes</option>
             <option value="Last Year">Ultimo Año</option>
           </select>
-		</div>
+		</div>-->
       </div>
   </div>
 </div>
