--- a/src/app/pages/projects/create/create.component.html
+++ b/src/app/pages/projects/create/create.component.html
@@ -25,8 +25,10 @@
                         placeholder="Escribe nombre de Proyecto" formControlName="nombre">
                         
                     <label class="form-label" style="margin-top: 20px !important;" for="project-title-input">Descripción del Proyecto</label>
-                    <input type="text" class="form-control" id="project-title-input"
-                        placeholder="Escribe descripción del Proyecto" formControlName="descripcion">
+                    <!--<input type="text" class="form-control" id="project-title-input"
+                        placeholder="Escribe descripción del Proyecto" formControlName="descripcion">-->
+                        <textarea rows="3" class="form-control" id="project-title-input"
+                        placeholder="Escribe descripción del Plan de trabajo" formControlName="descripcion"></textarea>
                     </form>
                 </div>
             </div>
